--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="static/css/style.css">
 
 </head>
-<body class="bg-light">
+<body class="bg-dark">
     <div class="wrapper">
         <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
@@ -37,26 +37,26 @@
             <div class="row">
                 <div class="col-md-3">
                     <h3>Filters for the Table</h3>
-                    <form class="bg-light">
+                    <form class="bg-dark">
                         <p>Filter Search</p>
-                        <ul class="list-group bg-light">
-                            <li class="list-group-item bg-light">
+                        <ul class="list-group bg-dark">
+                            <li class="list-group-item bg-dark">
                                 <label for="datetime" style="width: 30%;">Enter Date:</label>
                                 <input type="text" placeholder="1/10/2010" id="datetime" />
                             </li>
-                            <li class="list-group-item bg-light">
+                            <li class="list-group-item bg-dark">
                                 <label for="city" style="width: 30%;">Enter a City:</label>
                                 <input type="text" id="city" />
                             </li>
-                            <li class="list-group-item bg-light">
+                            <li class="list-group-item bg-dark">
                                 <label for="state" style="width: 30%;">Enter a State:</label>
                                 <input type="text" id="state" />
                             </li>
-                            <li class="list-group-item bg-light">
+                            <li class="list-group-item bg-dark">
                                 <label for="country" style="width: 30%;">Enter a Country:</label>
                                 <input type="text" id="country" />
                             </li>
-                            <li class="list-group-item bg-light">
+                            <li class="list-group-item bg-dark">
                                 <label for="shape" style="width: 30%;">Enter a Shape:</label>
                                 <input type="text" id="shape" />
                             </li>    
@@ -64,7 +64,7 @@
                     </form>
                 </div>
                 <div class="col-md-9">
-                    <h3>Table for Sightings Data</h3>>
+                    <h3>Table for Sightings Data</h3>
                     <table class="table table-striped">
                         <thead>
                             <tr>
